@@ -16,7 +16,7 @@
    +----------------------------------------------------------------------+
  */
 
-/* $Id: parse_date.re,v 1.26.2.27.2.12.2.1 2008/01/13 15:16:02 derick Exp $ */
+/* $Id: parse_date.re,v 1.26.2.27.2.12.2.2 2008/01/17 20:45:08 derick Exp $ */
 
 #include "timelib.h"
 
@@ -836,8 +836,8 @@ frac = "."[0-9]+;
 
 ago = 'ago';
 
-hour24 = [01]?[0-9] | "2"[0-3];
-hour24lz = [01][0-9] | "2"[0-3];
+hour24 = [01]?[0-9] | "2"[0-4];
+hour24lz = [01][0-9] | "2"[0-4];
 hour12 = "0"?[1-9] | "1"[0-2];
 minute = [0-5]?[0-9];
 minutelz = [0-5][0-9];
